--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
                     <relocations>
                         <relocation>
                             <pattern>com.cryptomorin.xseries</pattern>
-                            <shadedPattern>org.kayteam.xmaterial</shadedPattern>
+                            <shadedPattern>org.kayteam.xseries</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>de.tr7zw.changeme.nbtapi</pattern>
